{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 97,
  "lineage": "024a8f99-d24c-9774-a0b5-b048c5db31bb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "serviceimmediately_psc_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-08-13T19:00:49.140-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/migration-demo-429608/regions/us-east1/addresses/serviceimmediately-psc-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "serviceimmediately-psc-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "migration-demo-429608",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/regions/us-east1/addresses/serviceimmediately-psc-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/regions/us-east1/subnetworks/elevate-hr-subnet",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "workweek_psc_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.0.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-08-13T19:00:49.407-07:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/migration-demo-429608/regions/us-east1/addresses/workweek-psc-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "workweek-psc-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "migration-demo-429608",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/regions/us-east1/addresses/workweek-psc-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/regions/us-east1/subnetworks/elevate-hr-subnet",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "run_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/regions/us-east1/networkEndpointGroups/elevate-hr-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-08-13T19:11:31.351-07:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "AUeU2P-7oBI=",
            "generated_id": 1987595646534928316,
            "iap": [
              {
                "enabled": true,
                "oauth2_client_id": "placeholder-client-id",
                "oauth2_client_secret": "placeholder-client-secret",
                "oauth2_client_secret_sha256": "b37cfcf5c2bf89c5ab90596fa42604f8e87a470a0f7ea99c5ea4187f8c5789c3"
              }
            ],
            "id": "projects/migration-demo-429608/global/backendServices/elevate-hr-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "elevate-hr-backend",
            "port_name": "http",
            "project": "migration-demo-429608",
            "protocol": "HTTPS",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/securityPolicies/elevate-hr-waf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/backendServices/elevate-hr-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "iap"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "oauth2_client_secret"
              }
            ]
          ],
          "dependencies": [
            "data.google_project.project",
            "google_cloud_run_v2_service.app",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.run_neg",
            "google_compute_security_policy.waf",
            "google_compute_subnetwork.subnet",
            "google_project_service.services",
            "google_service_account.app_sa",
            "google_storage_bucket.logs_data_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 2286684116622755682,
            "id": "projects/migration-demo-429608/global/forwardingRules/elevate-hr-http-rule",
            "ip_address": "136.68.56.2",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "elevate-hr-http-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "migration-demo-429608",
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/forwardingRules/elevate-hr-http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/targetHttpProxies/elevate-hr-http-proxy"
          },
          "dependencies": [
            "data.google_project.project",
            "google_cloud_run_v2_service.app",
            "google_compute_backend_service.run_backend",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.run_neg",
            "google_compute_security_policy.waf",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map",
            "google_project_service.services",
            "google_service_account.app_sa",
            "google_storage_bucket.logs_data_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/migration-demo-429608/global/networks/elevate-hr-vpc",
            "mtu": 0,
            "name": "elevate-hr-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8436326451196971077",
            "numeric_id": "8436326451196971077",
            "project": "migration-demo-429608",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/networks/elevate-hr-vpc"
          },
          "dependencies": [
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "waf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "Cloud Armor WAF policy for elevate-hr agent service",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "fingerprint": "I7j8OwvdEfI=",
            "id": "projects/migration-demo-429608/global/securityPolicies/elevate-hr-waf",
            "label_fingerprint": "vezUS-42LLM=",
            "labels": {},
            "name": "elevate-hr-waf",
            "project": "migration-demo-429608",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block SQL injection attacks",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredExpr('sqli-v33-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block XSS attacks",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredExpr('xss-v33-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1001,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/securityPolicies/elevate-hr-waf",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-08-13T19:00:34.050-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/migration-demo-429608/regions/us-east1/subnetworks/elevate-hr-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "elevate-hr-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/networks/elevate-hr-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "migration-demo-429608",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/regions/us-east1/subnetworks/elevate-hr-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 1534606815920375853
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_project_service.services"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-13T19:12:16.945-07:00",
            "fingerprint": "kc2oz_sXv-8=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/migration-demo-429608/global/targetHttpProxies/elevate-hr-http-proxy",
            "name": "elevate-hr-http-proxy",
            "project": "migration-demo-429608",
            "proxy_bind": false,
            "proxy_id": 1463248167680329583,
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/targetHttpProxies/elevate-hr-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/urlMaps/elevate-hr-url-map"
          },
          "dependencies": [
            "data.google_project.project",
            "google_cloud_run_v2_service.app",
            "google_compute_backend_service.run_backend",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.run_neg",
            "google_compute_security_policy.waf",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.url_map",
            "google_project_service.services",
            "google_service_account.app_sa",
            "google_storage_bucket.logs_data_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-13T19:12:05.056-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/backendServices/elevate-hr-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "gzFwk-KnEps=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/migration-demo-429608/global/urlMaps/elevate-hr-url-map",
            "map_id": 5819937446553700251,
            "name": "elevate-hr-url-map",
            "path_matcher": [],
            "project": "migration-demo-429608",
            "self_link": "https://www.googleapis.com/compute/v1/projects/migration-demo-429608/global/urlMaps/elevate-hr-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_project.project",
            "google_cloud_run_v2_service.app",
            "google_compute_backend_service.run_backend",
            "google_compute_network.vpc",
            "google_compute_region_network_endpoint_group.run_neg",
            "google_compute_security_policy.waf",
            "google_compute_subnetwork.subnet",
            "google_project_service.services",
            "google_service_account.app_sa",
            "google_storage_bucket.logs_data_bucket"
          ]
        }
      ]
    }
  ]
}